Indexer siege reports

--- a/src/app/indexer/indexer.component.scss
+++ b/src/app/indexer/indexer.component.scss
@@ -29,6 +29,11 @@
   color: #18bc9b;
 }
 
+// Recent conquests
+.conquests-card {
+  margin-bottom: 5px;
+}
+
 .no-index-container {
   height: 100%;
 }
