--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -19,7 +19,7 @@
 		          </h3>
 	          </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1" style="display: flex; justify-content: space-between;">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 col-lg-offset-1 title-selection">
 
 	            <div>
 		            <mat-icon class="icon-margin"><div class="bg-flag flag-{{server}}"></div></mat-icon>
@@ -43,8 +43,8 @@
 		            </mat-form-field>
 	            </div>
 
-            <!--</div>-->
-            <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 title-paginator">-->
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 title-paginator">
               <mat-paginator class="title-paginator"
                              [length]="count"
                              [pageSize]="size"
