--- a/src/app/indexer/all-sieges.html
+++ b/src/app/indexer/all-sieges.html
@@ -97,7 +97,7 @@
 											<span *ngIf="!conquest.cs_killed && !conquest.new_owner_player_id">unresolved</span>
 											<span *ngIf="!conquest.cs_killed && conquest.new_owner_player_id">Successful conquest by defenders</span>
 										</div>
-										<div class="text-right" style="float: right;">
+										<div class="text-right" style="float: right;" *ngIf="conquest?.hide_details != true">
 											<a class="a-link-dialog" (click)="loadConquestDetails(conquest)">Detailed report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></a>
 										</div>
 									</div>
