--- a/src/app/indexer/all-sieges.html
+++ b/src/app/indexer/all-sieges.html
@@ -27,10 +27,11 @@
 											<img src="../../assets/images/town_ico.png"/>&nbsp;{{conquest.town_name}}
 										</a>
 										<span *ngIf="conquest.player_name!='' || conquest.alliance_name!=''">(</span>
-										<span *ngIf="conquest.player_name!=''"><a routerLink="/indexer/player/{{key}}/{{world}}/{{conquest?.player_id}}">
+										<span *ngIf="conquest.player_name!=''&&conquest.player_id!=0"><a routerLink="/indexer/player/{{key}}/{{world}}/{{conquest?.player_id}}">
 											        <img src="../../assets/images/player_ico.png"/>&nbsp;{{conquest.player_name}}
 										        </a></span>
-										<span *ngIf="conquest.alliance_name!=''"><span *ngIf="conquest.player_name!=''">, </span>
+										<span *ngIf="conquest.player_id==0||conquest.player_name==''">Ghost town</span>
+										<span *ngIf="conquest.alliance_name!=''&&conquest.alliance_id!=0"><span *ngIf="conquest.player_name!=''">, </span>
 											        <a routerLink="/indexer/alliance/{{key}}/{{world}}/{{conquest?.alliance_id}}">
 											        <img src="../../assets/images/ally_ico.png"/>&nbsp;{{conquest.alliance_name}}
 										        </a></span>
@@ -93,11 +94,17 @@
 									<div class="">
 										<div class="text-left" style="float: left; padding: 3px 0;">
 											<strong>Result:&nbsp;</strong>
-											<span *ngIf="conquest.cs_killed">siege broken by attackers</span>
+											<span *ngIf="conquest.cs_killed || (conquest.new_owner_player_id && conquest.new_owner_player_id == conquest.player_id)">siege broken by attackers</span>
 											<span *ngIf="!conquest.cs_killed && !conquest.new_owner_player_id">unresolved</span>
-											<span *ngIf="!conquest.cs_killed && conquest.new_owner_player_id">Successful conquest by defenders</span>
+											<span *ngIf="!conquest.cs_killed && conquest.new_owner_player_id && conquest.new_owner_player_id != conquest.belligerent_player_id && conquest.new_owner_player_id != conquest.player_id">successful conquest</span>
+											<span *ngIf="!conquest.cs_killed && conquest.new_owner_player_id && conquest.new_owner_player_id == conquest.belligerent_player_id">
+												successful conquest<span *ngIf="conquest.belligerent_player_name!=''"> by</span>
+												<a routerLink="/player" [queryParams]="{world: world, id: conquest.belligerent_player_id}" *ngIf="conquest.belligerent_player_name!=''">
+													{{conquest.belligerent_player_name}}
+												</a>
+											</span>
 										</div>
-										<div class="text-right" style="float: right;" *ngIf="conquest?.hide_details != true">
+										<div class="text-right" style="float: right;">
 											<a class="a-link-dialog" (click)="loadConquestDetails(conquest)">Detailed report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></a>
 										</div>
 									</div>
